# DrugBug

./: .env.example  .gitignore  README.md
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  providers.tsx
client/app/(app)/: layout.tsx
client/app/welcome/: page.tsx
client/components/app/: nav.tsx  shell.tsx
client/components/caregiver/: access-badge.tsx  caregiver-utils.ts  my-caregivers-list.tsx  patient-dashboard-card.tsx  patient-meds-list.tsx
client/components/cascade/: cascade-graph.tsx  cascade-list.tsx  cascade-modal.tsx  cascade-utils.ts  edge-panel.tsx  pill-node.tsx
client/components/insights/: adherence-chart.tsx  appointment-card.tsx  appointment-form.tsx  brief-card.tsx  insights-utils.ts  med-legend.tsx  missed-doses-chart.tsx  pattern-cards.tsx  side-effect-scatter.tsx
client/components/med/: disclaimer.tsx  drug-autocomplete.tsx  edit-med-modal.tsx  log-side-effect-modal.tsx  med-card.tsx  med-utils.ts  schedule-builder.tsx
client/components/pharmacofit/: consent-banner.tsx  consent-gate.tsx  genotype-upload.tsx  limitation-caveat.tsx  pgx-flag-card.tsx
client/lib/: db.ts  format.ts  hooks.ts  inference-client.ts  missed-dose.ts  push.ts  utils.ts
client/public/: manifest.webmanifest  sw.js
docs/: CLIENT_FOUNDATION.md  FOUNDER_COMPLIANCE_PLAYBOOK.md  INFERENCE_CONTRACT.md  MONOGRAPH_DESIGN.md  TRAIN_CASCADE_GNN.md
inference/: .env.example  Dockerfile  README.md  requirements.txt
inference/app/: __init__.py  config.py  jobs.py  main.py  patterns.py  spacetime_writeback.py  storage.py
inference/etl/: __init__.py  common.py  ingest_cpic.py  ingest_ddinter.py  ingest_pill_reference.py  ingest_rxnorm.py  ingest_twosides.py
inference/training/: __init__.py  build_graph.py  mine_faers_cascades.py  train_cascade_gnn.py  train_imprint_ocr.py  train_pill_embedder.py
infra/: README.md  docker-compose.yml
module/: Cargo.toml  README.md
module/src/: auth.rs  lib.rs  reducers.rs  rls.rs  scheduler.rs  tables.rs  util.rs
(+112 files in other folders)
