[package]
name = "drugbug-module"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

# NOTE on Row-Level Security: spacetimedb 2.4.1 ships `client_visibility_filter`
# only under the `unstable` feature AND does not yet enforce it at runtime — worse,
# defining RLS filters breaks the websocket *subscription* path (SubscribeApplied
# never fires), so clients hang. The RLS rules live in src/rls.rs (not compiled —
# `mod rls;` is commented out in lib.rs) ready to re-enable once the platform lands
# RLS. Until then, read-scoping is enforced client-side by identity and the
# write-path authorization in auth.rs is fully enforced. See module/README.md.
[dependencies]
spacetimedb = "2.4"
log = "0.4"
# Date arithmetic for dose-horizon materialization. No `clock` feature: the module
# never reads the host clock directly (it uses `ctx.timestamp`), so this builds
# cleanly to wasm32-unknown-unknown.
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
